<resources>
    <string name="app_name">AppExamen</string>
    <string name="title_activity_image_gallery">ImageGallery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_buttonLogin">LOG IN</string>
    <string name="txt_usernameHint">Username</string>
    <string name="txt_passwordHint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_title">Title</string>
    <string name="txt_content">Content</string>
    <string name="txt_buttonOk">OK</string>
    <string name="txt_wrongCredentials">Error logging in, please check what you\'ve entered </string>
    <string name="txt_nothingHere">Nothing to see here</string>
    <string name="txt_userReader">Reader type</string>
    <string name="txt_userWriter">Writer type</string>
    <string name="txt_writtenArticles">%1$s written articles</string>
    <string name="txt_heartedArticles">%1$s hearted articles</string>
    <string name="txt_addArticle">Write new article</string>
    <string name="txt_articleDeleted">Article has been deleted</string>
</resources>